TFP-6387: Utvider VurderFagsystem hvor sak opprettes automatisk hvis … (#7557)
* TFP-6387: Utvider VurderFagsystem hvor sak opprettes automatisk hvis opprettSakVedBehov er satt og destinasjon er vedtaksløsningen for strukturerte søknader

* Flytter opp oppretting av sak slik at det gjrelder IM og søknad

* Legger til opprett sak ved behov test for IM også

* Legger til rette for knytting av sak og journalpostid i jouranlpost-endepunktet

* Bump fp-kontrakt